fix: visual adjustment

--- a/src/app/shared/layout/modals/register-modal/parts/address-data/address-data.component.html
+++ b/src/app/shared/layout/modals/register-modal/parts/address-data/address-data.component.html
@@ -5,7 +5,7 @@
                 <div class="col-md-12">
                     <div class="form-group mb-4">
                         <div class="input-md">
-                            <input type="text" id="cep" class="form-control inverted-out input-style label-personalized"
+                            <input type="text" id="cep" class="form-control inverted-out label-personalized"
                                 formControlName="cep" mask="00000-000" [ngClass]="applyCssInputError('cep')"
                                 placeholder=" " inputmode="numeric">
                             <label for="cep" class="text-input">{{'geral.cep' | translate}}</label>
@@ -19,7 +19,7 @@
                     <div class="form-group mb-4">
                         <div class="input-md">
                             <input type="text" id="logradouro"
-                                class="form-control inverted-out input-style label-personalized"
+                                class="form-control inverted-out label-personalized"
                                 formControlName="logradouro" [ngClass]="applyCssInputError('logradouro')" placeholder=""
                                 inputmode="text">
                             <label for="logradouro" class="text-input">{{'geral.endereco' | translate}}</label>
@@ -34,7 +34,7 @@
                     <div class="form-group mb-4">
                         <div class="input-md">
                             <input type="text" id="bairro"
-                                class="form-control inverted-out input-style label-personalized"
+                                class="form-control inverted-out label-personalized"
                                 formControlName="bairro" [ngClass]="applyCssInputError('bairro')" placeholder=""
                                 inputmode="text">
                             <label for="bairro" class="text-input">{{'geral.bairro' | translate}}</label>
@@ -47,7 +47,7 @@
                 <div class="form-group mb-4 col-md-8">
                     <div class="input-md">
                         <input type="text" id="complemento"
-                            class="form-control inverted-out input-style label-personalized"
+                            class="form-control inverted-out label-personalized"
                             formControlName="complemento" [ngClass]="applyCssInputError('complemento')" placeholder=""
                             inputmode="text">
                         <label for="complemento" class="text-input">{{'geral.complement' | translate}}</label>
@@ -57,7 +57,7 @@
                 </div>
                 <div class="form-group mb-4 col-md-4">
                     <div class="input-md">
-                        <input type="text" id="numero" class="form-control input-style label-personalized"
+                        <input type="text" id="numero" class="form-control label-personalized"
                             formControlName="numero" [ngClass]="applyCssInputError('numero')" placeholder=""
                             inputmode="numeric">
                         <label for="numero" class="text-input">{{'geral.numero' | translate}}</label>
