--- a/src/app/clientes/personal-data/document/document.component.html
+++ b/src/app/clientes/personal-data/document/document.component.html
@@ -2,23 +2,23 @@
     <div class="grid">
         <div class="field">
             <label>CPF</label>
-            <span>072-817-544-42</span>
+            <span>{{ customer.cpf }}</span>
         </div>
         <div class="field">
             <label>Nome</label>
-            <span>Iuri B****** N**********</span>
+            <span>{{ customer.nome }} {{ customer.sobrenome }}</span>
         </div>
         <div class="field">
             <label>Data de nascimento</label>
-            <span>20/02/1987</span>
+            <span>{{ customer.data_nascimento }}</span>
         </div>
         <div class="field">
             <label>Nacionalidade</label>
-            <span>Brasileiro</span>
+            <span>{{ customer.nationality }}</span>
         </div>
         <div class="field">
             <label>Gênero</label>
-            <span>Neutro</span>
+            <span>{{ customer.genero }}</span>
         </div>
     </div>
     <button type="button" class="btn btn-custom">Verificar agora</button>
