--- a/src/app/clientes/personal-data/phone/phone.component.html
+++ b/src/app/clientes/personal-data/phone/phone.component.html
@@ -33,7 +33,21 @@
         </div>
     </div>
     <div class="actions">
-        <button type="button" class="btn btn-custom">Verificar agora</button>
-        <button *ngIf="isEditingPhone" type="button" class="btn btn-custom2" (click)="handleUpdatePhone()">Salvar alteração</button>
+        <button
+            type="button"
+            class="btn btn-custom"
+            *ngIf="verificationRequired"
+            (click)="handleVerification()"
+        >
+            Verificar agora
+        </button>
+        <button
+            *ngIf="isEditingPhone"
+            type="button"
+            class="btn btn-custom2"
+            (click)="handleUpdatePhone()"
+        >
+            Salvar alteração
+        </button>
     </div>
 </div>
