--- a/src/app/shared/sidebar/sidebar-nav/sidebar-nav.component.html
+++ b/src/app/shared/sidebar/sidebar-nav/sidebar-nav.component.html
@@ -248,7 +248,7 @@
                     <ul>
                         <li class="cambista-subitem">
                             <a
-                                [routerLink]="['/clientes/perfil']"
+                                [routerLink]="['/clientes/personal-data']"
                                 routerLinkActive="router-link-active"
                             >
                                 <span class="regiao-nome">{{'geral.dadosPessoais' | translate}}</span>
@@ -343,7 +343,7 @@
                 </a>
 
                 <div class="sub-nav-container" *ngIf="subTransacoes">
-                    <ul>                      
+                    <ul>
                         <li class="cambista-subitem">
                             <a
                                 [routerLink]="['/clientes/deposito']"
