fix: adjust account verification layout

--- a/src/app/clientes/personal-data/address/address.component.html
+++ b/src/app/clientes/personal-data/address/address.component.html
@@ -11,7 +11,7 @@
                     mask="00000-000"
                     inputmode="numeric"
                 />
-                <label for="addressZipCode" class="text-input">{{'geral.cepss' | translate}}</label>
+                <label for="addressZipCode" class="text-input">{{'geral.cep' | translate}}</label>
             </div>
             <div class="input-md">
                 <input
@@ -67,7 +67,6 @@
             </div>
         </div>
         <div class="actions">
-            <button type="button" class="btn btn-custom">Verificar agora</button>
             <button type="submit" class="btn btn-custom2">Salvar Alterações</button>
         </div>
     </form>
