--- a/src/app/clientes/personal-data/address/address.component.html
+++ b/src/app/clientes/personal-data/address/address.component.html
@@ -67,7 +67,7 @@
             </div>
         </div>
         <div class="actions">
-            <button type="submit" class="btn btn-custom2">Salvar Alterações</button>
+            <button type="submit" class="btn btn-custom2" [disabled]="formAddress.invalid">Salvar Alterações</button>
         </div>
     </form>
 </div>
