--- a/src/app/clientes/personal-data/email/email.component.css
+++ b/src/app/clientes/personal-data/email/email.component.css
@@ -59,6 +59,19 @@
     gap: 10px;
 }
 
+.btn-change-email {
+    cursor: pointer;
+    color: var(--foreground);
+    font-size: 10px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+
+    padding: 5px 6px;
+    border-radius: 2px;
+    background: var(--background);
+}
+
 @media (max-width: 768px) {
     .grid {
         grid-template-columns: 1fr; /* 1 coluna em telas pequenas */
