--- a/src/app/clientes/personal-data/phone/phone.component.css
+++ b/src/app/clientes/personal-data/phone/phone.component.css
@@ -70,6 +70,19 @@
     gap: 10px;
 }
 
+.btn-change-phone {
+    cursor: pointer;
+    color: var(--foreground);
+    font-size: 10px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+
+    padding: 5px 6px;
+    border-radius: 2px;
+    background: var(--background);
+}
+
 @media (max-width: 768px) {
     .grid {
         grid-template-columns: 1fr; /* 1 coluna em telas pequenas */
