--- a/src/app/shared/layout/header/header.component.html
+++ b/src/app/shared/layout/header/header.component.html
@@ -400,7 +400,7 @@
                                 <img src="https://wb-assets.com/img/blank-profile-picture.png" width="40">
                                 <h4 class="menu-conta-header">{{ usuario.nome | titlecase }}</h4>
                             </div>
-                            <app-card-verification-pending *ngIf="accountVerificationPending"/>
+                            <app-card-verification-pending *ngIf="accountVerificationPending" (click)="abrirEditarPerfil()"/>
 
                             <div class="saldos-container">
                                 <div class="saldos-item">
@@ -659,7 +659,7 @@
                                 <h4 class="menu-conta-header">{{ usuario.nome | titlecase }}</h4>
                             </div>
 
-                            <app-card-verification-pending *ngIf="accountVerificationPending"/>
+                            <app-card-verification-pending *ngIf="accountVerificationPending" (click)="abrirEditarPerfil()"/>
 
                             <div class="saldos-container">
                                 <div class="saldos-item" *ngIf="!isCliente">
