--- a/src/app/clientes/personal-data/personal-data.component.html
+++ b/src/app/clientes/personal-data/personal-data.component.html
@@ -1,4 +1,4 @@
-<div id="personal-data-page">
+<div id="personal-data-page" [ngStyle]="{'height': currentHeight + 'px'}">
     <div class="page-title">
         <h1>Dados pessoais</h1>
         <p>Descrição, vê o texto para inserir aqui.</p>
