--- a/src/app/clientes/personal-data/terms/terms.component.css
+++ b/src/app/clientes/personal-data/terms/terms.component.css
@@ -13,3 +13,35 @@ h2 {
     margin-bottom: 30px;
     margin-top: 20px;
 }
+
+ul {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+     display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+ul li {
+    display: flex;
+    justify-content: space-between;
+    padding: 10px 15px;
+    background-color: var(--inputs-odds);
+    color: var(--foreground-inputs-odds);
+    border-radius: 4px;
+}
+
+
+ul li span{
+    display: flex;
+    gap: 5px;
+    align-items: center;
+}
+
+ul li a {
+    color: var(--highlight);
+    display: flex;
+    gap: 5px;
+    align-items: center;
+}
