feature: new layout register v3

--- a/src/app/shared/layout/modals/register-v3-modal/register-v3-modal.component.html
+++ b/src/app/shared/layout/modals/register-v3-modal/register-v3-modal.component.html
@@ -1,10 +1,7 @@
 
 <div class="contents-register">
     <div class="banner">
-        <img
-            src="../../../../../assets/images/mock/login-banner.png"
-            alt="weebet_banner"
-        >
+        <app-banners pagina="cadastro"></app-banners>
     </div>
     
     <div class="container" *ngIf="modalClose">
