--- a/src/app/shared/layout/banners/banners.component.css
+++ b/src/app/shared/layout/banners/banners.component.css
@@ -7,6 +7,11 @@
     aspect-ratio: 16/2;
 }
 
+.resolutionCadastro {
+    width: 100%;
+    height: 100%;
+}
+
 .resolution16x4 {
     width: 100%;
     aspect-ratio: 16/4;
