--- a/src/app/shared/layout/modals/register-v3-modal/register-v3-modal.component.scss
+++ b/src/app/shared/layout/modals/register-v3-modal/register-v3-modal.component.scss
@@ -1,3 +1,7 @@
+::ng-deep .modal-dialog .modal-content {
+    background-color: transparent !important;
+}
+
 .row,
 .row > *,
 .col,
@@ -15,6 +19,7 @@ a {
 .form-group input {
     height: 44px !important;
 }
+
 
 .container {
     height: 100%;
@@ -247,6 +252,8 @@ button {
     display: flex;
     flex-direction: column;
     gap: 1px;
+
+    background-color: var(--background);
 }
 
 .text-body-register-cancel {
@@ -440,10 +447,7 @@ h3 {
 
 .close-modal-activation {
     border-radius: 100%;
-    position: absolute;
     display: flex;
-    top: 4px;
-    right: 5px;
     cursor: pointer;
     padding-top: 3px;
     padding-right: 5px;
@@ -728,6 +732,7 @@ a.link-termos-politica {
 }
 
 .contents-register{
+    background-color: var(--background);
     display: flex;
     flex-direction: column;
     height: 100svh;
